objects/ssot__Scope3ProcurementSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CalendarYear__c</fullName>
        <label>Calendar Year</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Scope 3 Procurement Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InflationRateOverridePercentage__c</fullName>
        <label>Inflation Rate Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PcmtEmssnFctrId__c</fullName>
        <label>Procurement Emission Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emission Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383677013_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementSummary_Scope3CrbnF_rel</label>
        <referenceTo>ssot__Scope3CarbonFootprint__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementSummary_Scope3CrbnF_rel</relationshipLabel>
        <relationshipName>rel_1747383677013_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383684301_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementSummary_PcmtEmssnFc_rel</label>
        <referenceTo>ssot__ProcurementEmissionFactorSet__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementSummary_PcmtEmssnFc_rel</relationshipLabel>
        <relationshipName>rel_1747383684301_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383688300_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope3ProcurementSummary_Scope3Emssn_rel</label>
        <referenceTo>ssot__Scope3EmissionsSource__dlm</referenceTo>
        <relationshipLabel>Scope3ProcurementSummary_Scope3Emssn_rel</relationshipLabel>
        <relationshipName>rel_1747383688300_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>